# fastapi-auth-setup

./: .requirements.txt  README.MD  main.py  pyproject.toml
src/: __init__.py  config.py
src/auth/: models.py  routes.py  schemas.py  services.py
src/db/: main.py  redis.py
src/emailServices/: schemas.py  services.py
src/file_uploads/: services.py
src/templates/: email-otp-verification.html  forgot-password-otp.html  welcome.html
src/utils/: auth.py  otp.py
